--- a/index.ipynb
+++ b/index.ipynb
@@ -2056,7 +2056,7 @@
     }
    ],
    "source": [
-    "area_values = [cities[0]['area'], cities[1]['area'], cities[2]['area']]\n",
+    "area_values = [cities[0]['Area'], cities[1]['area'], cities[2]['area']]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
    ]
