--- a/index.ipynb
+++ b/index.ipynb
@@ -2045,6 +2045,7 @@
    "outputs": [],
    "source": [
     "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
+    "area_valu\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
    ]
